slightly simpliy some set declarations (prev chkin was incomplete)